<?xml version="1.0"?>
<package format="2">
  <name>scalarpunk</name>
  <version>0.0.1</version>
  <description>Robot Eyes GUI with Qt and ROS2</description>

  <maintainer email="htetwaiyan.zyme@gmail.com">zyme</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>scalarpunk_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>scalarpunk_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
